# pmrustcli

./: Cargo.toml  README.md
src/: appconfig.rs  main.rs  pmrest.rs
src/pm/: constants.rs  mod.rs  rest.rs
src/pm/models/: item.rs  me.rs  mod.rs
